style: fix broken layout at mobile

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,7 +1,13 @@
 @media (max-width: 768px) {
 
+    ul {
+        flex-wrap: wrap; 
+        padding: 0 10px; 
+    }
+
     img {
         width: 100%;
+        max-width: 300px;
         height: auto;
     }
 
